// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSlider.vue should be focused when active 1`] = `

<div class="v-input v-input--slider v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 50%;"
        >
          <div class="v-slider__thumb primary">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should match a snapshot 1`] = `

<div class="v-input v-input--slider theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should render component with thumbLabel and match a snapshot 1`] = `

<div class="v-input v-input--slider theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__thumb-container v-slider__thumb-container-label"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
          <div class="v-slider__thumb-label__container"
               style="display: none;"
          >
            <div class="v-slider__thumb-label">
              <span>
                0
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VSlider.vue should render component with ticks and match a snapshot 1`] = `

<div class="v-input v-input--slider v-input--slider--ticks theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
      <div role="slider"
           tabindex="0"
           class="v-slider"
      >
        <div class="v-slider__track__container">
          <div class="v-slider__track">
          </div>
          <div class="v-slider__track-fill primary">
          </div>
        </div>
        <div class="v-slider__ticks-container">
          <span class="v-slider__tick"
                style="left: 0%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 25%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 50%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 75%;"
          >
          </span>
          <span class="v-slider__tick"
                style="left: 100%;"
          >
          </span>
        </div>
        <div class="v-slider__thumb-container"
             style="left: 0%;"
        >
          <div class="v-slider__thumb">
          </div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;
